--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DATABASE_URL="postgresql://neondb_owner:npg_yAL6oPkpGi7D@ep-dry-math-a8lhvbfs-pooler.eastus2.azure.neon.tech/neondb?sslmode=require"
+UPSTASH_REDIS_REST_URL=https://expert-duckling-18869.upstash.io
+UPSTASH_REDIS_REST_TOKEN=AUm1AAIjcDEzZWY4NTc5YmZjYzM0OWM5OTJkMzJmZWE2MzllMTU1NnAxMA
+
 JWT_SECRET=Irvansandy123@
