--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^6.10.0"
+    "prisma": "^6.10.0",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
