--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
     "@upstash/redis": "^1.35.0",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "dayjs": "^1.11.13",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "node-cron": "^4.1.0",
     "prisma": "^6.10.0",
     "zod": "^3.25.67"
   },
